# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,8 @@ import healthRouter from "./health";
 import clubsRouter from "./clubs";
 import leaguesRouter from "./leagues";
 import searchRouter from "./search";
+import eventsRouter from "./events";
+import coachesRouter from "./coaches";
 
 const router: IRouter = Router();
 
@@ -10,5 +12,7 @@ router.use(healthRouter);
 router.use(clubsRouter);
 router.use(leaguesRouter);
 router.use(searchRouter);
+router.use(eventsRouter);
+router.use(coachesRouter);
 
 export default router;
